[package]
name = "kmh-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
inquire = "0.6.2"
aes-gcm = "0.10.2"
ring = "0.16.20"
data-encoding = "2.4.0"
clap = { version = "4.4.0", features = ["derive"] }
colored = "2.0.4"
salsa20 = "0.10.2"
chacha20 = "0.9.1"
arboard = { version = "3.2.1", features = ["wayland-data-control"] }
